--- a/app/globals.css
+++ b/app/globals.css
@@ -4,21 +4,22 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-primary-50: #f3f5ec;
-  --color-primary-100: #e6ead9;
-  --color-primary-200: #cdd5b3;
-  --color-primary-300: #b5c18d;
-  --color-primary-400: #9cad66;
+  --color-primary-50: #f7f8f2;
+  --color-primary-100: #ebeddf;
+  --color-primary-200: #d9dbc2;
+  --color-primary-300: #c2c89e;
+  --color-primary-400: #a5ad76;
   --color-primary-500: #737c4c; /* base */
-  --color-primary-600: #60663f;
-  --color-primary-700: #4d5232;
-  --color-primary-800: #3a3d26;
-  --color-primary-900: #27291a;
+  --color-primary-600: #636b42;
+  --color-primary-700: #515836;
+  --color-primary-800: #41462b;
+  --color-primary-900: #2e311e;
+
+  --font-rubik: "Rubik", sans-serif;
+  --font-sans: var(--font-rubik);
 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -135,5 +136,11 @@
   [role="button"]:not(:disabled),
   a {
     cursor: pointer;
+  }
+}
+
+@layer components {
+  .container-inner {
+    @apply mx-auto max-w-7xl px-4 sm:px-6 lg:px-8;
   }
 }
